src/objects/CH_Companies_House_Interface__mdt.object
<CustomObject>
    <description>This stores all the variables for the Companies House API</description>
    <fields>
        <fullName>CH_Company_Number_Field__c</fullName>
        <label>Company Number Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Method__c</fullName>
        <description>The method used in the Companies House API call</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Primary_Address_1_Field__c</fullName>
        <label>Primary Address 1 Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Primary_City_Field__c</fullName>
        <label>Primary City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Primary_Country_Field__c</fullName>
        <label>Primary Country Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Primary_Postal_Code_Field__c</fullName>
        <label>Primary Postal Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Resource__c</fullName>
        <description>Resource used in the Companies House API</description>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Token__c</fullName>
        <description>The token used to access Companies House API</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_URL__c</fullName>
        <description>The address of the Companies House API</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_User_Email__c</fullName>
        <description>Email used to get the token for Companies House API</description>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Companies House Interface</label>
    <pluralLabel>Companies House Interfaces</pluralLabel>
</CustomObject>